@@ -6,7 +6,7 @@ AC_INIT(libecasound/audiofx.h)
 dnl ---
 dnl Init automake
 dnl ---
-AM_INIT_AUTOMAKE(ecasound, 1.8.0d14)
+AM_INIT_AUTOMAKE(ecasound, 1.8.1d14)
 AM_CONFIG_HEADER(config.h)
 
 dnl ---
