@@ -4,4 +4,4 @@ const long int ecasound_library_version_current = 6;
 const long int ecasound_library_version_revision = 0;
 const long int ecasound_library_version_age = 0;
 
-const string ecasound_library_version = "1.8.0d14";
+const string ecasound_library_version = "1.8.1d14";
